# YoLoPlus

./: .gitignore  CMakeLists.txt  README.md
config/: config.xml
include/: ConfigNodeDefs.h  DataTypeDefs.h  MacroDefs.h
src/: CMakeLists.txt
src/Demo/: CMakeLists.txt
src/Demo/Test/: CMakeLists.txt
src/Demo/Train/: CMakeLists.txt
src/Demo/Validate/: CMakeLists.txt
src/XmlParser/: CMakeLists.txt  ConfigParser.h  ModelParser.h
